# rust-share

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: gateway.json
crates/: README.md
crates/app/: Cargo.toml
crates/app/src/: executor.rs  fronts.rs  gw.rs  log_pump.rs
crates/base/: Cargo.toml
crates/base/src/: error.rs  lib.rs  state.rs  util.rs
crates/ctp-futures/: Cargo.toml  README.md  build.rs  wrapper.hpp
crates/ctp-futures/src/: lib.rs  md_impl.rs  trade_impl.rs
crates/ctp_futures/: Cargo.toml  README.md  build.rs
crates/ctp_futures/src/: lib.rs  trade_impl.rs
crates/examples/: Cargo.toml  README.md  build.rs  ctp_md.rs  ctp_query.rs  spider.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: error.rs  executor.rs  fronts.rs  lib.rs  main.rs
crates/rust-share-util/: Cargo.toml
crates/rust-share-util/src/: lib.rs
crates/rust_share/: Cargo.toml
crates/rust_share/src/: lib.rs
crates/rust_share_util/: Cargo.toml
crates/rust_share_util/src/: lib.rs
crates/spider/: Cargo.toml
crates/spider/src/: lib.rs  mysteel.rs
crates/tora_option/: Cargo.toml  build.rs  wrapper.hpp
crates/tora_option/src/: lib.rs  trade_impl.rs
crates/tora_option/v_current/: TORATstpSPTraderApi.h  TORATstpSPUserApiDataType.h  TORATstpSPUserApiStruct.h  demo  demo_xmd_stock.cpp  version.txt
crates/tora_stock/: Cargo.toml  README.md  build.rs  wrapper.hpp
crates/tora_stock/src/: lib.rs  md_impl.rs  trade_impl.rs
crates/tora_stock/v_current/: TORATstpTraderApi.h  TORATstpUserApiDataType.h  TORATstpUserApiStruct.h  TORATstpXMdApi.h  TORATstpXMdApiDataType.h  TORATstpXMdApiStruct.h  demo_xmd_stock.cpp
crates/tora_stock/v_current/x64/: fasttraderapi.lib  traderapi.lib
crates/tora_stock/v_current/x86/: traderapi.lib
crates/tora_stock/v_current/xfastmdapi_20210924/xfastmdapi/x64/: xfastmdapi.lib
crates/tora_stock/v_current/xfastmdapi_20210924/xfastmdapi/x86/: xfastmdapi.lib
docs/: readme.md
scripts/: run_gateway.sh  start_ctp_query.sh
