[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
serde_json = { version = "1" }
serde = { version = "1" }
tokio = { version = "1", features = ["full"] }
base = { path = "../base" }
gateway = { path = "../gateway" }
ctp_futures = { path = "../ctp_futures" }
log = "0.4.11"

[[bin]]
name = "gw"
path = "src/gw.rs"
