[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
ctp_futures = { path = "../ctp_futures" }
tora_stock = { path = "../tora_stock" }
serde_json = { version = "1" }
serde = { version = "1" }
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
tracing-subscriber = "0.3.18"
futures = "0.3.5"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
chrono = "0.4"
axum-server = { git = "https://github.com/programatik29/axum-server.git", features = [
	"tls-rustls",
] }
axum = { version = "0.7", features = ["macros"] }
derive_more = "0.99.8"
itertools = "0.12.0"
simple-error = "0.2.1"
base64 = "0.22"
rand = "0.8"
axum-macros = "0.4"