[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
reqwest = { version = "0.11.0", features = ["json", "gzip", "multipart"] }
serde_json = {version = "1"}
serde ={ version = "1"}
itertools = "0.9.0"
